criado 1 parte do artigo

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,21 +15,22 @@
     </head>
     <body>
         <div style="display:flex;align-items:center;justify-content:space-around;padding: 0, 100px;">
-            <h1>{{ "< WVM />" }}</h1>
+            <h1 style="width:200px;">{{ "< WVM />" }}</h1>
             <div>
-                <a href="{{ path('home_app') }}">Home</a>
-                <a href="{{ path('articles_app') }}">Articles</a>
-                <a href="{{ path('about_app') }}">About</a>
-                <a href="{{ path('contact_app') }}">Contact</a>
-            </div>
-            <div>
+                <a style="text-decoration:none; color: #00000080;" href="{{ path('home_app') }}">HOME</a>
+                <a style="text-decoration:none; color: #00000080;" href="{{ path('articles_app') }}">ARTICLES</a>
+                <a style="text-decoration:none; color: #00000080;" href="{{ path('about_app') }}">ABOUT</a>
+                <a style="text-decoration:none; color: #00000080;" href="{{ path('contact_app') }}">CONTACT</a>
+            </div style="width:200px;">
+            <div style="width:200px;">
                 {% if is_granted('ROLE_USER') %}
-                    <a href="{{ path('app_logout') }}">Sair><a>
+                    <a href="{{ path('app_logout') }}">Sair></a>
                 {% else %}
                     <h2>____</h2>
                 {% endif %}
             </div>
         </div>
+        <hr />
         {% block body %}{% endblock %}
     </body>
 </html>
