--- a/templates/article/article.html.twig
+++ b/templates/article/article.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Hello ArticleController!{% endblock %}
 
 {% block body %}
 <style>
@@ -9,6 +9,8 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>You are in About!</h1>
+    <strong>title:</strong> {{ article.title }} <br />
+    <strong>author:</strong> {{ article.author }} <br />
+    <strong>texto:</strong> {{ article.content }} <br />
 </div>
 {% endblock %}
