--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -3,8 +3,18 @@
 {% block title %}Home{% endblock %}
 
 {% block body %}
-    <h1>You are in Home!</h1>
-    {% if is_granted('ROLE_USER') %}
-        <a href="{{ path('create_article') }}"></a>
-    {% endif %}
+<style>
+    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    .header {display: flex; justify-content: space-between; align-items: center; }
+</style>
+
+<div class="example-wrapper">
+    <div class="header">
+        <h1>Last Articles:</h1>
+        {% if is_granted('ROLE_USER') %}
+            <a href="{{ path('create_article') }}">CRIAR NEW ARTICLE</a>
+        {% endif %}
+    </div>
+</div>
 {% endblock %}
