--- a/templates/article/article.html.twig
+++ b/templates/article/article.html.twig
@@ -4,13 +4,93 @@
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    .content { 
+        padding: 3rem 9rem;
+        width: calc(100vw - 20rem);
+        display: grid;
+        column-gap: 50px;
+        grid-column: 1 / span 2;
+
+    }
+
+    body {
+        background-color: #FAFAFA !important;
+    }
+    
+    *  {
+        font-family: 'Inter', sans-serif;
+    }
+
+    .item1 {
+        grid-column-start: 1;
+        grid-column-end: 4;
+        grid-row-start: 1;
+        grid-row-end: auto;
+    } 
+
+    .item2 {
+        grid-column-start: 4;
+        grid-column-end: 4;
+        grid-row-start: 1;
+        grid-row-end: auto;
+        display: flex;
+        align-items: end;
+        flex-direction:column;
+    } 
+
+    .title {
+
+    }
+
+    .block-iteration {
+        border: 1px solid #ccc;
+        height: 200px;
+        width: 60px;
+        border-radius: 35px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        margin-right:3rem;
+        font-size:20px;
+        margin-bottom: 1rem;
+    }
+    
+    .icon-moon, .icon-globe {
+        color: #CCC;
+    }
+
+    .icon-heart {
+        color:red;       
+    }
 </style>
 
-<div class="example-wrapper">
-    <strong>title:</strong> {{ article.title }} <br />
-    <strong>author:</strong> {{ article.author }} <br />
-    <strong>texto:</strong> {{ article.content }} <br />
+<div class="content">
+    <div class="item1">
+        <h1>{{ article.title }}</h1>
+        {% set tagOppen = '<h1>'%}
+        {% set tagClose = '</h1>'%}
+        <strong>author:</strong> {{ article.author }} <br />
+        <strong>texto:</strong> {{ article.content|replace({'h2': tagOppen, 'h3': tagClose}) }} <br />
+    </div>
+
+    <div class="item2">
+        <div class="block-iteration">
+            <div class="icon-globe">
+                <i class="bi bi-globe2"></i>
+            </div>
+
+            <div class="icon-moon">
+                <i class="bi bi-moon-fill"></i>
+            </div>
+
+            <div class="icon-heart">
+                <i class="bi bi-heart-fill"></i>
+            </div>
+        </div>
+        <div>
+            <img src="{{ asset('images/anucio.png') }}" alt="anuncio">
+        </div>
+    </div>
 </div>
 {% endblock %}
