--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,12 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+
+        {# FONT AUDIOWIDE #}
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Inter:wght@400;700&display=swap" rel="stylesheet">
+
+        {# BOOTSTRAP ICONS #}
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -13,24 +19,9 @@
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
-    <body>
-        <div style="display:flex;align-items:center;justify-content:space-around;padding: 0, 100px;">
-            <h1 style="width:200px;">{{ "< WVM />" }}</h1>
-            <div>
-                <a style="text-decoration:none; color: #00000080;" href="{{ path('home_app') }}">HOME</a>
-                <a style="text-decoration:none; color: #00000080;" href="{{ path('articles_app') }}">ARTICLES</a>
-                <a style="text-decoration:none; color: #00000080;" href="{{ path('about_app') }}">ABOUT</a>
-                <a style="text-decoration:none; color: #00000080;" href="{{ path('contact_app') }}">CONTACT</a>
-            </div style="width:200px;">
-            <div style="width:200px;">
-                {% if is_granted('ROLE_USER') %}
-                    <a href="{{ path('app_logout') }}">Sair></a>
-                {% else %}
-                    <h2>____</h2>
-                {% endif %}
-            </div>
-        </div>
-        <hr />
+    <body style="padding:0;margin:0;box-sizing:border-box;background-color: #303030;">
+        {% include ('shared/_navbar.html.twig')%}
+
         {% block body %}{% endblock %}
     </body>
 </html>
